argocd/utility/gitea/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitea.homelab.bowmans.site`)
      kind: Rule
      services:
      - name: gitea-http
        port: 3000
      middlewares:
        - name: kube-system-private-ips-allow@kubernetescrd
  tls:
    secretName: gitea-certificate
